# scaler_signal

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 4a8acf83c689_disappearing_messages_chat_color_.py  63169d187c8d_init.py  8c30a7eccf0f_otp_codes_table.py  a1f2c3d4e5f6_message_is_forwarded.py
backend/app/: main.py  seed.py
backend/app/api/: auth.py  contacts.py  conversations.py  messages.py  uploads.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  attachment.py  contact_note.py  conversation.py  enums.py  member.py  message.py  otp_code.py  reaction.py  user.py
backend/app/schemas/: auth.py  contact.py  conversation.py  message.py  user.py  ws.py
backend/app/services/: auth.py  contacts.py  conversations.py  membership.py  messages.py  otp.py  phone.py  reactions.py  receipts.py  sms.py  users.py
backend/app/ws/: broadcast.py  handlers.py  manager.py  routes.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_health.py  test_membership.py  test_message_actions.py  test_messages.py  test_models.py  test_reactions.py  test_receipts.py  test_security.py  test_seed.py  test_signal_features.py  test_uploads.py  test_users.py  test_ws.py  test_ws_manager.py
docs/: DECISIONS.md  DEMO_DATA.md  DEPLOY.md  DEPLOY_PORTAL.md  DESIGN.md  SEED_USERS.md
frontend/: package-lock.json  package.json
infra/: azure-setup.sh
(+64 files in other folders)
